--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@
 services:
   - type: web
     name: tskim-portfolio-backend
-    env: java
+    runtime: java
     buildCommand: ./gradlew build -x test
     startCommand: java -jar build/libs/tskim-portfolio-backend-0.0.1-SNAPSHOT.jar
     envVars:
