--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
+    runtime: docker
     name: tskim-portfolio-backend
     plan: free        # 유료 플랜이면 starter, standard 등으로 변경 가능
-    buildCommand: ./gradlew clean build -x test
-    startCommand: java -jar build/libs/tskim-portfolio-backend-0.0.1-SNAPSHOT.jar
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: MONGODB_URI
         sync: false
