--- a/.github/workflows/cron-schedule.yaml
+++ b/.github/workflows/cron-schedule.yaml
@@ -2,8 +2,7 @@ name: Keep Render Awake
 
 on:
   schedule:
-    - cron: "*/15 22-23 * * *"  # UTC 22시~23시 → KST 07시~08시
-    - cron: "*/15 0-12 * * *"   # UTC 00시~12시 → KST 09시~21시
+    - cron: "*/15 22,23,0,1,2,3,4,5,6,7,8,9,10,11,12 * * *"  # UTC 22시~12시 → KST 07시~21시
   workflow_dispatch:
 
 jobs:
